attempted to align the buttons and fix title

--- a/CalgaryHacks21/olliper_styles.css
+++ b/CalgaryHacks21/olliper_styles.css
@@ -19,10 +19,19 @@ body {
 header > h1{
     color: sandybrown;
     text-align: center;
+    position: absolute;
+    left: 50%;
     font-family: sans-serif;
+    font-size: 100px;
+    height: 50px;
 }
 
-.schedulePlanner {
+.options {
+    text-align: center;
+    width: 100%;
+}
+
+.option {
     font-family: arial;
     text-transform: uppercase;
     font-size: 30px;
@@ -32,9 +41,9 @@ header > h1{
     line-height: 60px;
     text-align: center;
     border: 3px solid #ffffaf;
-    display: block;
+    display: inline-block;
     text-decoration: none;
-    margin: 300px auto;
+    margin: 10px auto;
     color: #ffffaf;
     position: relative;
     overflow: hidden;
@@ -42,7 +51,7 @@ header > h1{
     transition: .3s;
 }
 
-.schedulePlanner:before {
+.option:before {
     content: '';
     width: 100%;
     height: 100%;
@@ -51,11 +60,12 @@ header > h1{
     opacity: .5;
     top: -100%;
     left: 0;
+    right: 0;
     z-index: -1;
     transition: .3s;
 }
 
-.schedulePlanner:after {
+.option:after {
     content: '';
     width: 100%;
     height: 100%;
@@ -63,135 +73,21 @@ header > h1{
     background: #ffffaf;
     top: -100%;
     left: 0;
+    right: 0;
     z-index: -1;
     transition: .3s;
     transition-delay: .2s;
 }
 
-.schedulePlanner:hover {
+.option:hover {
     color: #fff;
 }
 
-.schedulePlanner:hover:before {
+.option:hover:before {
     top: 0;
 }
 
-.schedulePlanner:hover:after {
+.option:hover:after {
     top: 0;
 }
 
-.resourceRecommend {
-    font-family: arial;
-    text-transform: uppercase;
-    font-size: 30px;
-    width: 240px;
-    height: 60px;
-    border-radius: 80px;
-    line-height: 60px;
-    text-align: center;
-    border: 3px solid #ffffaf;
-    display: block;
-    text-decoration: none;
-    margin: 300px auto;
-    color: #ffffaf;
-    position: relative;
-    overflow: hidden;
-    background: transparent;
-    transition: .3s;
-}
-
-.resourceRecommend:before {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: #ffffaf;
-    opacity: .5;
-    top: -100%;
-    left: 0;
-    z-index: -1;
-    transition: .3s;
-}
-
-.resourceRecommend:after {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: #ffffaf;
-    top: -100%;
-    left: 0;
-    z-index: -1;
-    transition: .3s;
-    transition-delay: .2s;
-}
-
-.resourceRecommend:hover {
-    color: #fff;
-}
-
-.resourceRecommend:hover:before {
-    top: 0;
-}
-
-.resourceRecommend:hover:after {
-    top: 0;
-}
-
-.toDo {
-    font-family: arial;
-    text-transform: uppercase;
-    font-size: 30px;
-    width: 240px;
-    height: 60px;
-    border-radius: 80px;
-    line-height: 60px;
-    text-align: center;
-    border: 3px solid #ffffaf;
-    display: block;
-    text-decoration: none;
-    margin: 300px auto;
-    color: #ffffaf;
-    position: relative;
-    overflow: hidden;
-    background: transparent;
-    transition: .3s;
-}
-
-.toDo:before {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: #ffffaf;
-    opacity: .5;
-    top: -100%;
-    left: 0;
-    z-index: -1;
-    transition: .3s;
-}
-
-.toDo:after {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: #ffffaf;
-    top: -100%;
-    left: 0;
-    z-index: -1;
-    transition: .3s;
-    transition-delay: .2s;
-}
-
-.toDo:hover {
-    color: #fff;
-}
-
-.toDo:hover:before {
-    top: 0;
-}
-
-.toDo:hover:after {
-    top: 0;
-}
